force-app/main/default/objects/Payment_Account__c/Payment_Account__c.object-meta.xml
<CustomObject>
    <label>Payment Account</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>