force-app/main/default/objects/Payment_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <inlineHelpText>Only the last 4 digits will be visible.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>