force-app/main/default/objects/Payment_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to activate the payment</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>