force-app/main/default/objects/Payment_Account__c/fields/Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Holder_Name__c</fullName>
    <label>Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>