force-app/main/default/objects/Payment_Account__c/fields/Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Holder_Type__c</fullName>
    <label>Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>