force-app/main/default/objects/Payment_Account__c/fields/Stripe_Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Key__c</fullName>
    <label>Stripe Customer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>