force-app/main/default/objects/Payment_Account__c/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <label>Stripe ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>