force-app/main/default/objects/Payment_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to identify the type of Payment</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>